// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeedsGradingQuestion matches snapshot with all graded students 1`] = `
.c29 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c29:not([disabled]) {
  cursor: pointer;
}

.c29:not([disabled]):hover {
  background: #E74B0D;
}

.c29:not([disabled]):active {
  background: #C5400B;
}

.c29:disabled {
  opacity: 0.4;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem;
  border-left: 1px solid #f1f1f1;
  min-width: 300px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.8rem;
}

.c25 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: 600;
  color: #424242;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.8rem;
  font-size: calc(1.6rem * var(--content-text-scale));
}

.c26 {
  width: 6rem;
  padding: 0.8rem;
  font-size: calc(1.6rem * var(--content-text-scale));
  border: 1px solid #818181;
  border-radius: 4px;
  text-align: center;
}

.c26::-webkit-input-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c26::-moz-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c26:-ms-input-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c26::placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c26:focus {
  outline: none;
  border-color: #007da4;
}

.c26:disabled {
  background-color: #f1f1f1;
  cursor: not-allowed;
}

.c27 {
  width: 100%;
  min-height: 12rem;
  padding: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
  font-family: inherit;
  border: 1px solid #818181;
  border-radius: 4px;
  resize: vertical;
}

.c27:focus {
  outline: none;
  border-color: #007da4;
}

.c27:disabled {
  background-color: #f1f1f1;
  cursor: not-allowed;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  border-bottom: 1px solid #e5e5e5;
}

.c12:last-child {
  border-bottom: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1.2rem 1.6rem;
  background: none;
  border: none;
  cursor: pointer;
  gap: 1rem;
  text-align: left;
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
}

.c13:hover {
  background-color: #f9f9f9;
}

.c15 {
  font-weight: 600;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c16 {
  font-size: calc(1.3rem * var(--content-text-scale));
  color: #6f6f6f;
  white-space: nowrap;
}

.c16 strong {
  font-weight: 700;
  color: #424242;
}

.c3 {
  display: inline-block;
  width: 0;
  height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 6px solid #5f6163;
}

.c14 {
  display: inline-block;
  width: 0;
  height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-left: 6px solid #5f6163;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: 1px solid #f1f1f1;
}

.c18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.6rem;
  min-width: 0;
}

.c19 {
  border-left: 16px solid #f1f1f1;
  padding-left: 1.6rem;
  margin: 0 0 1rem 1rem;
  max-height: 16.8rem;
  overflow: hidden;
  position: relative;
  line-height: 1.6;
  font-size: calc(1.6rem * var(--content-text-scale));
  color: #5f6163;
  white-space: pre-wrap;
}

.c20 {
  margin-top: 1.6rem;
}

.c21 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: bold;
  color: #424242;
}

.c30 {
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
  white-space: pre-wrap;
  margin-top: 0.4rem;
}

.c30 .feedback-label {
  font-weight: bold;
}

.c8 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c8 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c8 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  border: 1px solid #e5e5e5;
  border-radius: 4px;
  overflow: hidden;
  margin-bottom: 2rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.2rem 1.6rem;
  background-color: #daf3f8;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.8rem;
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  text-align: left;
}

.c4 {
  font-size: calc(1.6rem * var(--content-text-scale));
  font-weight: 600;
  color: #424242;
  margin: 0;
}

.c5 {
  font-size: calc(1.3rem * var(--content-text-scale));
  font-weight: 600;
  color: #ffffff;
  background-color: #757575;
  border-radius: 5px;
  padding: 0.2rem 0.8rem;
}

.c10 {
  background: none;
  border: none;
  cursor: pointer;
  font-size: calc(1.2rem * var(--content-text-scale));
  color: #007da4;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10:hover {
  color: #026AA1;
}

.c6 {
  padding: 1.6rem 1.6rem 0;
  background-color: #fdfdfd;
}

.c7 {
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
}

.c9 {
  padding: 0.8rem 1.6rem 1.2rem;
  border-bottom: 1px solid #e5e5e5;
  background-color: #fdfdfd;
}

.c11 {
  background-color: #fdfdfd;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      />
      <span
        className="c4"
      >
        Question 
        2
      </span>
    </button>
    <span
      className="c5"
    >
      2
      /
      2
       Graded
    </span>
  </div>
  <div
    style={
      Object {
        "display": undefined,
      }
    }
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Describe Newton's first law.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="c9"
    >
      <button
        className="c10"
        onClick={[Function]}
        type="button"
      >
        Expand all answers
      </button>
    </div>
    <div
      className="c11"
    >
      <div
        className="c12"
      >
        <button
          aria-expanded={false}
          className="c13"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c14"
          />
          <span
            className="c15"
          >
            Ada Lovelace
          </span>
          <span
            className="c16"
          >
            <strong>
              Points:
            </strong>
             
            8
             out of 
            10
          </span>
        </button>
        <div
          className="c17"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            className="c18"
          >
            <div
              className="c19"
            >
              An object at rest stays at rest.
            </div>
            <div
              className="c20"
            >
              <div
                className="c21"
              >
                Score: 
                8
                /
                10
              </div>
            </div>
          </div>
          <div
            className="c22"
          >
            <div
              className="c23"
            >
              <div
                className="c24"
              >
                <label
                  className="c25"
                  htmlFor="frg-8-score"
                >
                  Points
                </label>
                <input
                  aria-label="Score"
                  className="c26"
                  disabled={false}
                  id="frg-8-score"
                  max={10}
                  min={0}
                  onChange={[Function]}
                  placeholder="--"
                  step={1}
                  type="number"
                  value="8"
                />
                <span>
                  out of 
                  10
                </span>
              </div>
            </div>
            <div
              className="c23"
            >
              <label
                className="c25"
                htmlFor="frg-8-comment"
              >
                Comment
              </label>
              <textarea
                aria-label="Comment"
                className="c27"
                disabled={false}
                id="frg-8-comment"
                onChange={[Function]}
                placeholder="Enter feedback for the student..."
                value=""
              />
            </div>
            <div
              className="c28"
            >
              <button
                className="c29"
                disabled={true}
                onClick={[Function]}
              >
                Update
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c12"
      >
        <button
          aria-expanded={false}
          className="c13"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c14"
          />
          <span
            className="c15"
          >
            Grace Hopper
          </span>
          <span
            className="c16"
          >
            <strong>
              Points:
            </strong>
             
            8
             out of 
            10
          </span>
        </button>
        <div
          className="c17"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            className="c18"
          >
            <div
              className="c19"
            >
              Things keep doing what they're doing.
            </div>
            <div
              className="c20"
            >
              <div
                className="c21"
              >
                Score: 
                8
                /
                10
              </div>
              <div
                className="c30"
              >
                <span
                  className="feedback-label"
                >
                  Comment:
                </span>
                 
                Good answer.
              </div>
            </div>
          </div>
          <div
            className="c22"
          >
            <div
              className="c23"
            >
              <div
                className="c24"
              >
                <label
                  className="c25"
                  htmlFor="frg-9-score"
                >
                  Points
                </label>
                <input
                  aria-label="Score"
                  className="c26"
                  disabled={false}
                  id="frg-9-score"
                  max={10}
                  min={0}
                  onChange={[Function]}
                  placeholder="--"
                  step={1}
                  type="number"
                  value="8"
                />
                <span>
                  out of 
                  10
                </span>
              </div>
            </div>
            <div
              className="c23"
            >
              <label
                className="c25"
                htmlFor="frg-9-comment"
              >
                Comment
              </label>
              <textarea
                aria-label="Comment"
                className="c27"
                disabled={false}
                id="frg-9-comment"
                onChange={[Function]}
                placeholder="Enter feedback for the student..."
                value="Good answer."
              />
            </div>
            <div
              className="c28"
            >
              <button
                className="c29"
                disabled={true}
                onClick={[Function]}
              >
                Update
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NeedsGradingQuestion matches snapshot with mixed graded and ungraded students 1`] = `
.c26 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c26:not([disabled]) {
  cursor: pointer;
}

.c26:not([disabled]):hover {
  background: #E74B0D;
}

.c26:not([disabled]):active {
  background: #C5400B;
}

.c26:disabled {
  opacity: 0.4;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem;
  border-left: 1px solid #f1f1f1;
  min-width: 300px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.8rem;
}

.c22 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: 600;
  color: #424242;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.8rem;
  font-size: calc(1.6rem * var(--content-text-scale));
}

.c23 {
  width: 6rem;
  padding: 0.8rem;
  font-size: calc(1.6rem * var(--content-text-scale));
  border: 1px solid #818181;
  border-radius: 4px;
  text-align: center;
}

.c23::-webkit-input-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c23::-moz-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c23:-ms-input-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c23::placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c23:focus {
  outline: none;
  border-color: #007da4;
}

.c23:disabled {
  background-color: #f1f1f1;
  cursor: not-allowed;
}

.c24 {
  width: 100%;
  min-height: 12rem;
  padding: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
  font-family: inherit;
  border: 1px solid #818181;
  border-radius: 4px;
  resize: vertical;
}

.c24:focus {
  outline: none;
  border-color: #007da4;
}

.c24:disabled {
  background-color: #f1f1f1;
  cursor: not-allowed;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  border-bottom: 1px solid #e5e5e5;
}

.c12:last-child {
  border-bottom: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1.2rem 1.6rem;
  background: none;
  border: none;
  cursor: pointer;
  gap: 1rem;
  text-align: left;
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
}

.c13:hover {
  background-color: #f9f9f9;
}

.c14 {
  font-weight: 600;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c15 {
  font-size: calc(1.3rem * var(--content-text-scale));
  color: #6f6f6f;
  white-space: nowrap;
}

.c15 strong {
  font-weight: 700;
  color: #424242;
}

.c3 {
  display: inline-block;
  width: 0;
  height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 6px solid #5f6163;
}

.c27 {
  display: inline-block;
  width: 0;
  height: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-left: 6px solid #5f6163;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-top: 1px solid #f1f1f1;
}

.c17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.6rem;
  min-width: 0;
}

.c18 {
  border-left: 16px solid #f1f1f1;
  padding-left: 1.6rem;
  margin: 0 0 1rem 1rem;
  max-height: 16.8rem;
  overflow: hidden;
  position: relative;
  line-height: 1.6;
  font-size: calc(1.6rem * var(--content-text-scale));
  color: #5f6163;
  white-space: pre-wrap;
}

.c28 {
  margin-top: 1.6rem;
}

.c29 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: bold;
  color: #424242;
}

.c30 {
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
  white-space: pre-wrap;
  margin-top: 0.4rem;
}

.c30 .feedback-label {
  font-weight: bold;
}

.c8 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c8 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c8 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  border: 1px solid #e5e5e5;
  border-radius: 4px;
  overflow: hidden;
  margin-bottom: 2rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.2rem 1.6rem;
  background-color: #daf3f8;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.8rem;
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  text-align: left;
}

.c4 {
  font-size: calc(1.6rem * var(--content-text-scale));
  font-weight: 600;
  color: #424242;
  margin: 0;
}

.c5 {
  font-size: calc(1.3rem * var(--content-text-scale));
  font-weight: 600;
  color: #ffffff;
  background-color: #757575;
  border-radius: 5px;
  padding: 0.2rem 0.8rem;
}

.c10 {
  background: none;
  border: none;
  cursor: pointer;
  font-size: calc(1.2rem * var(--content-text-scale));
  color: #007da4;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10:hover {
  color: #026AA1;
}

.c6 {
  padding: 1.6rem 1.6rem 0;
  background-color: #fdfdfd;
}

.c7 {
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
}

.c9 {
  padding: 0.8rem 1.6rem 1.2rem;
  border-bottom: 1px solid #e5e5e5;
  background-color: #fdfdfd;
}

.c11 {
  background-color: #fdfdfd;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c3"
      />
      <span
        className="c4"
      >
        Question 
        1
      </span>
    </button>
    <span
      className="c5"
    >
      1
      /
      2
       Graded
    </span>
  </div>
  <div
    style={
      Object {
        "display": undefined,
      }
    }
  >
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Describe Newton's first law.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="c9"
    >
      <button
        className="c10"
        onClick={[Function]}
        type="button"
      >
        Expand all answers
      </button>
    </div>
    <div
      className="c11"
    >
      <div
        className="c12"
      >
        <button
          aria-expanded={true}
          className="c13"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c3"
          />
          <span
            className="c14"
          >
            Ada Lovelace
          </span>
          <span
            className="c15"
          >
            <strong>
              Points:
            </strong>
             
            --
             out of 
            10
          </span>
        </button>
        <div
          className="c16"
          style={
            Object {
              "display": undefined,
            }
          }
        >
          <div
            className="c17"
          >
            <div
              className="c18"
            >
              An object at rest stays at rest.
            </div>
          </div>
          <div
            className="c19"
          >
            <div
              className="c20"
            >
              <div
                className="c21"
              >
                <label
                  className="c22"
                  htmlFor="frg-0-score"
                >
                  Points
                </label>
                <input
                  aria-label="Score"
                  className="c23"
                  disabled={false}
                  id="frg-0-score"
                  max={10}
                  min={0}
                  onChange={[Function]}
                  placeholder="--"
                  step={1}
                  type="number"
                  value=""
                />
                <span>
                  out of 
                  10
                </span>
              </div>
            </div>
            <div
              className="c20"
            >
              <label
                className="c22"
                htmlFor="frg-0-comment"
              >
                Comment
              </label>
              <textarea
                aria-label="Comment"
                className="c24"
                disabled={false}
                id="frg-0-comment"
                onChange={[Function]}
                placeholder="Enter feedback for the student..."
                value=""
              />
            </div>
            <div
              className="c25"
            >
              <button
                className="c26"
                disabled={true}
                onClick={[Function]}
              >
                Save
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c12"
      >
        <button
          aria-expanded={false}
          className="c13"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c27"
          />
          <span
            className="c14"
          >
            Grace Hopper
          </span>
          <span
            className="c15"
          >
            <strong>
              Points:
            </strong>
             
            9
             out of 
            10
          </span>
        </button>
        <div
          className="c16"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            className="c17"
          >
            <div
              className="c18"
            >
              Things keep doing what they're doing.
            </div>
            <div
              className="c28"
            >
              <div
                className="c29"
              >
                Score: 
                9
                /
                10
              </div>
              <div
                className="c30"
              >
                <span
                  className="feedback-label"
                >
                  Comment:
                </span>
                 
                Good answer.
              </div>
            </div>
          </div>
          <div
            className="c19"
          >
            <div
              className="c20"
            >
              <div
                className="c21"
              >
                <label
                  className="c22"
                  htmlFor="frg-1-score"
                >
                  Points
                </label>
                <input
                  aria-label="Score"
                  className="c23"
                  disabled={false}
                  id="frg-1-score"
                  max={10}
                  min={0}
                  onChange={[Function]}
                  placeholder="--"
                  step={1}
                  type="number"
                  value="9"
                />
                <span>
                  out of 
                  10
                </span>
              </div>
            </div>
            <div
              className="c20"
            >
              <label
                className="c22"
                htmlFor="frg-1-comment"
              >
                Comment
              </label>
              <textarea
                aria-label="Comment"
                className="c24"
                disabled={false}
                id="frg-1-comment"
                onChange={[Function]}
                placeholder="Enter feedback for the student..."
                value="Good answer."
              />
            </div>
            <div
              className="c25"
            >
              <button
                className="c26"
                disabled={true}
                onClick={[Function]}
              >
                Update
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
